Velcro test First SandBox/src/objects/GrowthInitiative__c.object
<CustomObject>
    <description>Add Key Reward Opportunities to Business Plan</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Growth_Amount_PY_Normal__c</fullName>
        <formula>CASE( text(CurrencyIsoCode) , &quot;USD&quot;,  Growth_Initiative_AmountforPY__c  , &quot;CAD&quot;, Growth_Initiative_AmountforPY__c / value(&quot;.943400&quot;),&quot;BRL&quot;, Growth_Initiative_AmountforPY__c / value(&quot;0.434800&quot;),&quot;MXN&quot;, Growth_Initiative_AmountforPY__c / value(&quot;0.078700&quot;),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth Amount Plan Year Normal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Amount_Total__c</fullName>
        <formula>Growth_Amount_PY_Normal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sums Up Opp total and  non opp total to create a single field to roll up</inlineHelpText>
        <label>Growth Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Amount__c</fullName>
        <label>Growth Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Initiative_AmountforPY__c</fullName>
        <inlineHelpText>If no Opportunity Exists in Salesforce, Here is where you enter Amount for Growth Initiatives that are not Opportunities in Salesforce.com</inlineHelpText>
        <label>Growth Initiative Amount for Plan Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Growth_Initiative_for_Plan_Year__c</fullName>
        <label>Growth Initiative for Plan Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>RelatedOpportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field auto populates Related Opp amount.   If you are not Relating an Opp to this Growth Initiatve</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Growth Initiative is already an Opportunity in Salesforce - Add that Opportunity here</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Growth Initiatives</relationshipLabel>
        <relationshipName>Reward_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reward__c</fullName>
        <label>Business Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Reward_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipping_Time_Frame__c</fullName>
        <label>Shipping Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q1-Q2</fullName>
                </value>
                <value>
                    <fullName>Q1-Q3</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q2-Q3</fullName>
                </value>
                <value>
                    <fullName>Q2-Q4</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q3-Q4</fullName>
                </value>
                <value>
                    <fullName>Ongoing Through Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Growth Initiative</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Reward Opportunities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Growth Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>